// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credential Model Create Credentail 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
    Object {
      "@version": 1.1,
      "data": Object {
        "@context": Object {
          "worker": Object {
            "@id": "meta:worker",
            "@type": "xsd:string",
          },
        },
        "@id": "meta:data",
        "@type": "@id",
      },
      "meta": "https://meta-id.meta-belarus.org/vc-schema#",
    },
  ],
  "credentialSubject": Object {
    "data": Object {
      "@type": "TestCredentialSubjectDataType",
      "worker": "Valentin Michalych",
    },
  },
  "holder": Object {
    "id": "did:peer:yyyy",
  },
  "id": "did:peer:xxxxx",
  "issuanceDate": Any<String>,
  "type": Array [
    "VerifiableCredential",
    "TestCredential",
  ],
}
`;

exports[`Credential Model Sing Credential 1`] = `
Object {
  "@context": Array [
    "https://www.w3.org/2018/credentials/v1",
    Object {
      "@version": 1.1,
      "data": Object {
        "@context": Object {
          "worker": Object {
            "@id": "meta:worker",
            "@type": "xsd:string",
          },
        },
        "@id": "meta:data",
        "@type": "@id",
      },
      "meta": "https://meta-id.meta-belarus.org/vc-schema#",
    },
  ],
  "credentialSubject": Object {
    "data": Object {
      "@type": "TestCredentialSubjectDataType",
      "worker": "Valentin Michalych",
    },
  },
  "holder": Object {
    "id": "did:peer:yyyy",
  },
  "id": "did:peer:xxxxx",
  "issuanceDate": Any<String>,
  "issuer": "did:peer:zzzzz",
  "proof": Object {
    "created": Any<String>,
    "jws": Any<String>,
    "proofPurpose": "assertionMethod",
    "type": "EcdsaSecp256k1Signature2019",
  },
  "type": Array [
    "VerifiableCredential",
    "TestCredential",
  ],
}
`;
